# games_project_loginova

./: Makefile  main.py  pyproject.toml  ruff.toml
games_project_loginova/VD_games/: cli.py  engine.py
games_project_loginova/VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
