[project]
name = "games-project-loginova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_loginova"]

[project.scripts]
VD-games = "games_project_loginova.VD_games.scripts.VD_main:main"
