[project]
name = "games-project-loginova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_loginova"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
VD-games = "games_project_loginova.VD_games.scripts.VD_games:play_game"
VD-even = "games_project_loginova.VD_games.scripts.VD_even:play_even_game"
VD-calc = "games_project_loginova.VD_games.scripts.VD_calc:play_calc_game"
VD-gcd = "games_project_loginova.VD_games.scripts.VD_gcd:play_gcd_game"
VD-progression = "games_project_loginova.VD_games.scripts.VD_progression:play_progression_game"
VD-prime = "games_project_loginova.VD_games.scripts.VD_prime:play_prime_game"
